fix2: about hero section overflow

--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ main {
 .service-card,
 .service-text-block-1,
 .service-text-block-2,
-.about-hero
+.about-hero,
 .about-hero-image {
   overflow-x: hidden;
 }
